--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -32,7 +32,7 @@
         <!--STYLES END-->
         <!-- Google fonts -->
         <script type="text/javascript" src="min/min.js"></script>
-        <script type="text/javascript" src="phonegap.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
     </head>
 
     <body class="ng-cloak">
@@ -43,10 +43,9 @@
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>d
         </button>
         <a href="#!/" class="navbar-brand">Apologyfm</a>
-        <a ng-show='isNotification' href="#!/playback">You has {{ notificationsCount }} apologies</a>
     </div>
     <nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
         <ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
