--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
         <!--STYLES END-->
         <!-- Google fonts -->
         <script type="text/javascript" src="min/min.js"></script>
-        <script type="text/javascript" src="phonegap.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
     </head>
 
     <body class="ng-cloak">
