--- a/www/index.html
+++ b/www/index.html
@@ -36,14 +36,14 @@
     </head>
 
     <body class="ng-cloak">
-    <header class="navbar navbar-fixed-top navbar-inverse">
+<!--     <header class="navbar navbar-fixed-top navbar-inverse">
     <div class="container" data-ng-controller="HeaderController">
     <div class="navbar-header">
         <button class="navbar-toggle" type="button" data-ng-click="toggleCollapsibleMenu()">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>d
+            <span class="icon-bar"></span>
         </button>
         <a href="#!/" class="navbar-brand">Apologyfm</a>
     </div>
@@ -95,11 +95,11 @@
         </ul>
     </nav>
         <script type="text/javascript">
-            var user = {{ user | json | safe }};
-            console.log(user);
+            // var user = {{ user | json | safe }};
+            // console.log(user);
         </script>
 </div>
-</header>
+</header> -->
     <section class="content">
         <section class="container">
                 <section data-ui-view></section>
